# i18nValidator

./: LICENSE  README.md  ci_cd_report.html  client_project_demo.py  demo_cicd.py  i18n-checker-documentation.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci_cd.yml
demo-client-project/: package.json
demo-client-project/.github/workflows/: i18n-validation.yml
demo-client-project/locales/: en.json
demo-client-project/src/: app.js
i18n_checker/: __init__.py  checker.py  cli.py
i18n_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
locales/: en.json  fr.json  qqq.json
test_code/: app.py  sample.js  sample.ts  sample.vue  views.py
tests/: __init__.py  test_basic.py
