[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "i18n-checker"
version = "0.1.0"
description = "A tool for detecting unused and missing localization keys across multiple programming languages and frameworks"
readme = "README.md"
authors = [{name = "i18n-checker Team", email = "example@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Internationalization",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"

[project.urls]
"Homepage" = "https://github.com/yourusername/i18n-checker"
"Bug Tracker" = "https://github.com/yourusername/i18n-checker/issues"

[project.scripts]
i18n-checker = "i18n_checker.cli:main" 